feat: se añade un nuevo endpoint que permite asignar multiples usuarios a multiples grupos, respetando los limites y warnings definidos
